--- a/the-apodaca-project/src/app/app.component.html
+++ b/the-apodaca-project/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-nav></app-nav>
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -8,7 +9,7 @@
 
 <!-- <pre>{{model | json}}</pre> -->
 
-<div class="btn-group btn-group-toggle">
+<!-- <div class="btn-group btn-group-toggle">
   <label class="btn-primary" ngbButtonLabel>
     <input type="checkbox" ngbButton [(ngModel)]="model.left"> Left (pre-checked)
   </label>
@@ -18,5 +19,19 @@
   <label class="btn-primary" ngbButtonLabel>
     <input type="checkbox" ngbButton [(ngModel)]="model.right"> Right
   </label>
-</div>
+</div> -->
 
+<div class="cent">
+  <ngb-carousel class="car" style="width:60%; margin-left: auto; margin-right: auto"  #carousel interval="1000" [pauseOnHover]="pauseOnHover" (slide)="onSlide($event)">
+    <ng-template ngbSlide *ngFor="let img of images; index as i">
+      <div class="carousel-caption">
+        <h3>My slide {{i + 1}} title</h3>
+      </div>
+      <a href="https://www.google.fr/?q=Number+{{i+1}}" target="_blank" rel="nofollow noopener noreferrer">
+        <div class="picsum-img-wrapper">
+          <img [src]="img" alt="My image {{i + 1}} description">
+        </div>
+      </a>
+    </ng-template>
+  </ngb-carousel>
+</div>
