--- a/the-apodaca-project/src/app/nav/nav.component.html
+++ b/the-apodaca-project/src/app/nav/nav.component.html
@@ -5,11 +5,17 @@
     </div> -->
     <div class="menubar">
       <ul>
-        <li><a routerLink="show-rooms">Show Rooms</a></li>
-        <li><a routerLink="addroom">Add Room</a></li>
-        <li><a routerLink="add-complex">Add Living Complex</a></li>
+        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="addroom">Games</a></li>
+        <!-- <li><a routerLink="add-complex">Add Living Complex</a></li>
         <li><a href="https://revature.com/our-story/">About Us</a></li>
-        <li><a routerLink="./provider-select">Select Provider</a></li>
+        <li><a routerLink="./provider-select">Select Provider</a></li> -->
+        
       </ul>
     </div>
+    <div class="menubar-name">
+        <ul>
+          <li><a routerLink="/">The Apodaca Project</a></li>
+        </ul>
+      </div>
   </div>
